# cmfapoc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-paper.yml  publish_notebooks.yml
data/prepared/: measurements-daria.csv  measurements-sergi.csv  measurements.csv
data/raw/: 250218_Fluxomics_split1_900uL_g3p_excluded.csv  250218_Fluxomics_split2_900uL.csv  PivotTable_freqs 1.csv  theoretical.csv
paper/: arxiv-template.tex  main.docx  main.md  main.tex  readme.md  refs.bib  template.tex
scripts/: calibration.py  fit_fluxomics.py  fluxomics.stan
src/cmfapoc/: data_preparation.py  simulation.py
