[project]
name = "cmfapoc"
version = "0.1.0"
description = "Proof of concept for compositional 13C metabolic flux analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmfapoc"]

[tool.ruff]
line-length = 80
