[project]
name = "cmfapoc"
version = "0.1.0"
description = "Proof of concept for compositional 13C metabolic flux analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.21.0",
    "cmdstanpy>=1.2.5",
    "numpy>=2.2.4",
    "polars>=1.22.0",
    "scikit-bio>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmfapoc"]

[tool.ruff]
line-length = 80
